--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="target-wrapper">
-        <i id="target-eye" class="fa-duotone fa-eye-low-vision" style="--fa-primary-color: white; --fa-secondary-color: #e0161d; --fa-secondary-opacity: 1.0;"></i>
+        <i id="target-eye" class="fa-duotone fa-eye-low-vision" style="--fa-primary-color: white; --fa-secondary-color: #6600cc; --fa-secondary-opacity: 1.0;"></i>
         <div class="target-label-wrapper">
             <div class="target-label"></div>
         </div>
